crates/panache-parser/tests/snapshots/yaml__yaml_suite_PW8X.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: PW8X
input: "- &a\n- a\n-\n  &a : a\n  b: &b\n-\n  &c : &a\n-\n  ? &d\n-\n  ? &e\n  : &a\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
