crates/panache-parser/tests/snapshots/yaml__yaml_suite_Q4CL.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: Q4CL
input: "key1: \"quoted1\"\nkey2: \"quoted2\" trailing content\nkey3: \"quoted3\"\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_DEDENT:comment cannot appear inside a multi-line plain scalar@32..48]
