crates/panache-parser/tests/snapshots/yaml__yaml_suite_Q5MG.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: Q5MG
input: "\t{}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
