crates/panache-parser/tests/snapshots/yaml__yaml_suite_Q9WF.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: Q9WF
input: "{ first: Sammy, last: Sosa }:\n# Statistics:\n  hr:  # Home runs\n     65\n  avg: # Average\n   0.278\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
