crates/panache-parser/tests/snapshots/yaml__yaml_suite_QB6E.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: QB6E
input: "---\nquoted: \"a\nb\nc\"\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_DEDENT:multi-line quoted scalar continuation indented at or below parent block indent@15..16]
