crates/panache-parser/tests/snapshots/yaml__yaml_suite_QF4Y.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 245
expression: snapshot
---
case_id: QF4Y
input: "[\nfoo: bar\n]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
