crates/panache-parser/tests/snapshots/yaml__yaml_suite_QLJ7.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: QLJ7
input: "%TAG !prefix! tag:example.com,2011:\n--- !prefix!A\na: b\n--- !prefix!B\nc: d\n--- !prefix!C\ne: f\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_TRAILING_CONTENT_AFTER_DOCUMENT_START:trailing content after document start marker@40..51]
