crates/panache-parser/tests/snapshots/yaml__yaml_suite_QT73.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 922
expression: snapshot
---
case_id: QT73
input: "# comment\n...\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
