crates/panache-parser/tests/snapshots/yaml__yaml_suite_R4YG.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: R4YG
input: "- |\n detected\n- >\n \n  \n  # detected\n- |1\n  explicit\n- >\n \t\n detected\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
