crates/panache-parser/tests/snapshots/yaml__yaml_suite_R52L.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: R52L
input: "---\n{ top1: [item1, {key2: value2}, item3], top2: value2 }\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
