crates/panache-parser/tests/snapshots/yaml__yaml_suite_RHX7.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: RHX7
input: "---\nkey: value\n%YAML 1.2\n---\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_DIRECTIVE_AFTER_CONTENT:directive requires document end before subsequent directives@15..24]
